tests/valid/trait/method_generic_signature.facet
trait Show;

trait Mapper {
  fn map<T>(self: Self, value: unrestricted T) -> unrestricted T where T: Show;
}

impl Mapper for unrestricted isize {
  fn map<T>(self: Self, value: unrestricted T) -> unrestricted T where T: Show {
    value
  }
}

fn main() -> unrestricted () {
  ()
}
