tests/invalid/trait/impl_lifetime_arg.facet
trait Show;

struct Box {
  value: unrestricted isize
}

impl<'a> Show<'a> for affine Box;

fn main() -> unrestricted () {
  ()
}
